Corretti alcuni refusi
- link di page-nav errati e refusi in processing_tests.html
- link processing_tests.html mancante nella pagina http://qgis.it/traduzione.html.

--- a/traduzione.html
+++ b/traduzione.html
@@ -96,6 +96,9 @@
                 <a href="http://qgis.it#support">Sostieni</a>
               </li>
               <li>
+                <a href="http://qgis.it/processing_tests.html">Processing Test</a>
+              </li>
+              <li>
                 <a href="http://qgis.it#translation">Traduzioni</a>
               </li>
               <li>
