first draft of summer camp

--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
         </div>
         <div class="container">
           <div class="row">
+            <div class="col-xs-12">
+              <h2 class="featurette-heading">QGIS Summer Camp</h2>
+              <p>
+                Vai alla <a href="http://qgis.it/summer_camp.html">pagina dedicata</a> per scoprire tutte le informazioni!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
             <div class="col-sm-6 lead byline">Benvenuto nel gruppo degli utenti italiani di <a href="http://qgis.org/it/site/">QGIS</a>, il software GIS libero ed <i>open source</i> pi&ugrave; facile e pi&ugrave; utilizzato al mondo.
            </div>
           </div>
