--- a/summer_camp.html
+++ b/summer_camp.html
@@ -207,7 +207,7 @@
               <h3>Iscrizioni e quota di partecipazione</h3>
               <p class="lead">
                   <br>
-              <strong>Early booking - </strong>Per chi si iscrive entro il 15 maggio ci sono molti vantaggi:
+              <strong>Early booking - </strong>Per chi si iscrive entro il 10 giugno ci sono molti vantaggi:
                 <ul class="lead">
                   <li>
                     90&euro; per i 3 giorni compresi di attività, vitto, alloggio e 6 crediti;
@@ -220,7 +220,7 @@
                   </li>
                 </ul>
 
-              Dopo il 15 maggio le quote saranno, rispettivamente di 110€, 95€ e  80€.
+              Dopo il 10 giugno le quote saranno, rispettivamente di 110€, 95€ e  80€.
               </p>
             </br>
               <h3>Pagamento</h3>
