--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                </h6>
                <div class="mb-1 text-white-50 small">Quando? due volte l'anno</div>
                <p class="card-text mb-auto">Vuoi partecipare al progetto anche senza essere sviluppatore? Vieni e scopri come puoi aiutare!</p>
-               <a class="btn btn-outline-light btn-sm" role="button" href="https://github.com/pcav/sito_qgis_it/wiki/QGIS-HackFest--4---Padova"target=”_blank”>Dove sarà la prossima QHF?</a>
+               <a class="btn btn-outline-light btn-sm" role="button" href="https://github.com/pcav/sito_qgis_it/wiki/QGIS-HackFest--4---Padova">Dove sarà la prossima QHF?</a>
             </div>
             <img class="card-img-right flex-auto d-none d-lg-block" alt="HackFest" src="img/HF1.jpg" style="width: 200px; height: 250px;">
          </div>
@@ -170,7 +170,7 @@
             <div class="card-body d-flex flex-column align-items-start">
                <strong class="d-inline-block mb-2 text-white">Q-SummerCamp</strong>
                <h6 class="mb-0">
-                  <a class="text-white" href="http://212.237.232.12/summercamp/" target=”_blank”>Una full immersion tra natura e QGIS</a>
+                  <a class="text-white" href="http://212.237.232.12/summercamp/">Una full immersion tra natura e QGIS</a>
                </h6>
                <div class="mb-1 text-white-50 small">Quando? Luglio</div>
                <p class="card-text mb-auto">Un'esperienza unica per conoscere la comunità di QGIS, divertirsi e scambiarsi idee e trucchi</p>
