--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="col-3 mr-auto text-center">
           <i class="fas fa-vial fa-3x mb-3 text-white"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block text-white" href="#">Test di Processing</a>
+          <a class="d-block text-white" href="https://github.com/qgis-it/qgis-it.github.io/wiki/Come-aggiungere-test-per-Processing">Test di Processing</a>
         </div>
       <div class="col-3 mr-auto text-center">
       <i class="fas fa-lightbulb fa-3x mb-3 text-white"></i>
