--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <div class="row">
         <div class="col-3 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-language fa-3x mb-3 text-white"></i>
-          <a class="d-block text-white" href="#services">Traduzione</a>        
+          <a class="d-block text-white" href="https://github.com/qgis-it/qgis-it.github.io/wiki/Traduzione">Traduzione</a>        
         </div>
         <div class="col-3 mr-auto text-center">
           <i class="fas fa-vial fa-3x mb-3 text-white"></i>
@@ -208,7 +208,7 @@
       <div class="col-3 mr-auto text-center">
       <i class="fas fa-lightbulb fa-3x mb-3 text-white"></i>
       <!-- Make sure to change the email address in anchor text AND the link below! -->
-      <a class="d-block text-white" href="#">Tips</a>
+      <a class="d-block text-white" href="https://github.com/qgis-it/qgis-it.github.io/wiki/Tips">Tips</a>
     </div>
     <div class="col-3 mr-auto text-center">
       <i class="fas fa-bug fa-3x mb-3 text-white"></i>
