--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-language text-primary mb-4"></i>
             <h3 class="h4 mb-2">Traduzione e Documentazione</h3>
-            <p class="text-muted mb-0">Dai una mano a tradurre QGIS o a scrivere la documentazione. Per diventare traduttore <a href="mailto:traduzioni@qgis.it?subject=Info_traduzioni_qgis_sito"><b>scrivici</b></a>, registrati su <a href="http://www.transifex.com"> Transifex</a> ed inizia l'avventura</p>
+            <p class="text-muted mb-0">Dai una mano a tradurre QGIS o a scrivere la documentazione. Per diventare traduttore <a href="mailto:traduzioni@qgis.it?subject=Info_traduzioni_qgis_sito"><b>scrivici</b></a>, registrati su <a href="https://www.transifex.com"> Transifex</a> ed inizia l'avventura</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
