--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
   <link href="css/creative.min.css" rel="stylesheet">
   <link href="css/override.css" rel="stylesheet">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144346792-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144346792-1');
+</script>
+
+  
 </head>
 
 <body id="page-top">
