--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <h2 class="text-white mt-0">QGIS: condivisione, sviluppo, eventi</h2>
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">QGIS è il software GIS OpenSource più diffuso al mondo. Dietro a QGIS ci sono sviluppatori, professionisti, docenti, studenti che formano la comunità di utenti. La comunità si occupa della promozione di QGIS, dell'assistenza agli utenti e dello sviluppo del software a 360°: dal codice alla documentazione. Non serve essere un hacker per far parte della grande famiglia di QGIS Italia, basta avere voglia di mettersi in gioco, di condividere ed aiutare gli altri.</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="https://lists.osgeo.org/mailman/listinfo/qgis-it-user" target="_blank">ML QGIS Italia</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="https://lists.osgeo.org/mailman/listinfo/qgis-it-user" target="_blank">ML QGIS Italia</a> <a class="btn btn-light btn-xl js-scroll-trigger" href="https://qgis.org" target="_blank">Download QGIS</a>
         </div>
       </div>
  
