--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                <h6 class="mb-0">
                   <a class="text-white" href="#services">Partecipa</a>
                </h6>
-               <div class="mb-1 text-white-50 small">Quando? due volte l'anno</div>
+               <div class="mb-1 text-white-50 small">Quando? 21-22 febbraio a Torino</div>
                <p class="card-text mb-auto">Vuoi partecipare al progetto anche senza essere sviluppatore? Vieni e scopri come puoi aiutare!</p>
                <a class="btn btn-outline-light btn-sm" role="button" href="https://github.com/qgis-it/qgis-it.github.io/wiki/QGIS-IT-Contributors-Meeting-(HackFest-5)-(Torino)"target=”_blank”>Dove sarà la prossima QHF?</a>
             </div>
