--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                </h6>
                <div class="mb-1 text-white-50 small">Quando? 3-5 Luglio 2020</div>
                <p class="card-text mb-auto">Un'esperienza unica per conoscere la comunità di QGIS, divertirsi e scambiarsi idee e trucchi</p>
-               <a class="btn btn-outline-light btn-sm" href="http://212.237.232.12/summercamp/">Guarda il sito del Q-SummerCamp</a>
+               <a class="btn btn-outline-light btn-sm" href="http://qgis.it/summercamp/">Guarda il sito del Q-SummerCamp</a>
             </div>
             <img class="card-img-right flex-auto d-none d-lg-block" alt="SummerCamp" src="img/HF2.jpg" style="width: 200px; height: 250px;">
          </div>
