--- a/summercamp/index.html
+++ b/summercamp/index.html
@@ -82,7 +82,7 @@
           <h2 class="text-white mt-0">Tre giorni, trenta partecipanti, un solo software!</h2>
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">Il QGIS Summer Camp, come tutti gli eventi di QGIS Italia (Hackfest, etc.), è un momento per conoscere chi usa QGIS, per condividere esperienze e contribuire allo sviluppo di QGIS. Non serve essere uno sviluppatore, i nostri eventi sono ì trasversali, per tutti e soprattutto liberi.</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="http://qgis.it/" target="_blank">QGIS Italia</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#" target="_blank">Iscriviti</a>
         </div>
       </div>
     </div>
