--- a/summercamp/index.html
+++ b/summercamp/index.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"> <img src="img/logo.png" style="height: 30px"> QGIS Summercamp 2019</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"> <img src="img/logo.png" style="height: 30px"> QGIS Summercamp</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
