Change Muttley Affiliation

--- a/summercamp/index.html
+++ b/summercamp/index.html
@@ -458,7 +458,7 @@
                   <div class="card-body text-center">
                       <p><img class=" img-fluid" src="img/partecipanti/muttley.jpeg" alt="card image"></p>
                       <h4 class="card-title">Muttley</h4>
-                      <p class="card-text" style="color:#007b5e">QGIS Italia</p>
+                      <p class="card-text" style="color:#007b5e">GFOSS.it</p>
                       <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
                   </div>
               </div>
