--- a/summercamp/index.html
+++ b/summercamp/index.html
@@ -42,11 +42,11 @@
           <!-- Modal content-->
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">Cambio date Summercamp 2020</h4>
+              <h4 class="modal-title">QGIS SummerCamp 2020</h4>
             </div>
             <div class="modal-body">
-              <p>A causa del COVID19, il Summercamp previsto per luglio viene spostato. Le nuove date sono 4-5-6 settembre 2020 sempre al Parco Fenice.
-              </p> <br> <p>Sperando che torni presto tutto alla normalità, ci scusiamo per il disagio.
+              <p>A causa del COVID19, il Summercamp previsto per settembre 2020 viene RINVIATO AL 2021.
+              </p> <br> <p>Stiamo preparando il più grande evento online della comunità italiana di QGIS. Stay Tuned e seguici sui nostri canali social.
               </p>
             </div>
             <div class="modal-footer">
