--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                <h6 class="mb-0">
                   <a class="text-white" href="http://qgis.it/summercamp/index.html" target=”_blank”>Una full immersion tra natura e QGIS</a>
                </h6>
-               <div class="mb-1 text-white-50 small">Quando? 4-6 Settembre 2020</div>
+               <div class="mb-1 text-white-50 small">Quando? Estate 2021</div>
                <p class="card-text mb-auto">Un'esperienza unica per conoscere la comunità di QGIS, divertirsi e scambiarsi idee e trucchi</p>
                <a class="btn btn-outline-light btn-sm" href="http://qgis.it/summercamp/">Guarda il sito del Q-SummerCamp</a>
             </div>
