--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <div class="col-3 mr-auto text-center">
           <i class="fa fa-envelope fa-3x mb-3 text-primary"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="https://lists.osgeo.org/mailman/listinfo/qgis-it-user ">Mailing list</a>
+          <a class="d-block" href="https://discourse.osgeo.org/g/qgis-it-user">Mailing list</a>
         </div>
       <div class="col-3 mr-auto text-center">
       <i class="fab fa-telegram-plane fa-3x mb-3 text-primary"></i>
